syntax = "proto3";

package images;

option go_package = ".";

import "google/api/annotations.proto";

service ImageProcessing {
  rpc ResizeImage (ResizeImageRequest) returns (ResizeImageResponse){
    option (google.api.http) = {
      post: "/api/image/resize"
      body: "*"
    };
  };
  rpc ConvertToGrayscale (ConvertToGrayscaleRequest) returns (ConvertToGrayscaleResponse){
    option (google.api.http) = {
      post: "/api/image/gray"
      body: "*"
    };
  };
}

message ResizeImageRequest {
  bytes image_data = 1;
  int32 width = 2;
  int32 height = 3;
}

message ResizeImageResponse {
  bytes resized_image_data = 1;
}

message ConvertToGrayscaleRequest {
  bytes image_data = 1;
}

message ConvertToGrayscaleResponse {
  bytes grayscale_image_data = 1;
}